[package]
name = "stellar"
version = "0.1.0"
authors = ["Keith Bingman <keith@keithbingman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
lazy_static = "1.0.0"
rand = "0.7.2"
sha2 = "0.8.0"
arrayref = "0.3.5"
